# MyTwitter

./: .gitignore  LICENSE  README.md  demo.py  pyproject.toml  terminal.py
MyTwitter/: mytwitter.py  perfil.py  pessoa_fisica.py  pessoa_juridica.py  repositorio.py
exceptions/: mfp_exception.py  pd_exception.py  pe_exception.py  pi_exception.py  si_exception.py  ujc_exception.py  unc_exception.py
frontEnd/: index.html
main/: mytwitter.py  perfil.py  pessoa_fisica.py  pessoa_juridica.py  repositorio.py  tweet.py
mytwitter/: perfil.py  tweet.py
tests/: test_mytwitter.py  test_perfil.py  test_pessoa_fisica.py  test_pessoa_juridica.py  test_repositorio.py  test_tweet.py
utils/: gerador_id.py
