[tool.poetry]
name = "mytwitter"
version = "1.0.0"
description = ""
authors = ["Hugo Mendes <fhugomp@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
pytest = "^8.3.4"


[tool.poetry.group.dev.dependencies]
flake8 = "^7.1.2"
black = "^25.1.0"
isort = "^6.0.0"
django = "^5.1.6"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
